force-app/main/default/objects/Policy_Term__c/Policy_Term__c.object-meta.xml
<CustomObject>
    <label>Policy Term</label>
    <nameField>
        <displayFormat>Policy Term-{0000}</displayFormat>
        <label>Policy Terms Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>