force-app/main/default/objects/Policy_Term__c/fields/Amount_to_be_Deducted1__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_be_Deducted1__c</fullName>
    <inlineHelpText>This is $ value</inlineHelpText>
    <label>Amount to be Deducted ($)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>