force-app/main/default/objects/Policy_Term__c/fields/Amount_to_be_Deducted__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_be_Deducted__c</fullName>
    <inlineHelpText>This is % value</inlineHelpText>
    <label>Amount to be Deducted (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>