force-app/main/default/objects/Policy_Term__c/fields/Cancellation_Policy__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancellation Policy</label>
    <referenceTo>Cancellation_Policy__c</referenceTo>
    <relationshipLabel>Policy Terms</relationshipLabel>
    <relationshipName>Policy_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>