force-app/main/default/objects/Policy_Term__c/fields/Days_To__c.field-meta.xml
<CustomField>
    <fullName>Days_To__c</fullName>
    <label>Days To</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>