force-app/main/default/objects/Policy_Term__c/fields/Manual_Check_Needed__c.field-meta.xml
<CustomField>
    <fullName>Manual_Check_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Check Needed</label>
    <type>Checkbox</type>
</CustomField>