force-app/main/default/objects/Policy_Term__c/fields/Merchant_Currency__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Currency__c</fullName>
    <formula>TEXT(Cancellation_Policy__r.Merchant__r.CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant Currency</label>
    <type>Text</type>
</CustomField>