force-app/main/default/objects/Policy_Term__c/fields/Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Policy_Type__c</fullName>
    <label>Policy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
            <value>
                <fullName>Force Majeure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>