force-app/main/default/objects/Policy_Term__c/fields/Refund_Type__c.field-meta.xml
<CustomField>
    <fullName>Refund_Type__c</fullName>
    <label>Refund Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Credit</fullName>
            </value>
            <value>
                <fullName>Partial Credit</fullName>
            </value>
            <value>
                <fullName>Full Refund</fullName>
            </value>
            <value>
                <fullName>Partial Refund</fullName>
            </value>
            <value>
                <fullName>Full Coupon</fullName>
                <default>true</default>
                <label>Full Coupon</label>
            </value>
            <value>
                <fullName>Partial Coupon</fullName>
            </value>
            <value>
                <fullName>No Refund/Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>